# clean-python-image

./: README.md  dockerfile.stage1-python311  dockerfile.stage2-python311-min  pyproject.toml  test.py
